#2 Story: Create register and Login for user Creation of entities for Department, Team, Teammate and Vacation.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -93,7 +93,31 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/vacation/vacation-dialog.controller.js"></script>
+    <script src="app/entities/vacation/vacation-detail.controller.js"></script>
+    <script src="app/entities/vacation/vacation-delete-dialog.controller.js"></script>
+    <script src="app/entities/vacation/vacation.state.js"></script>
+    <script src="app/entities/vacation/vacation.service.js"></script>
+    <script src="app/entities/vacation/vacation.controller.js"></script>
+    <script src="app/entities/teammate/teammate-dialog.controller.js"></script>
+    <script src="app/entities/teammate/teammate-detail.controller.js"></script>
+    <script src="app/entities/teammate/teammate-delete-dialog.controller.js"></script>
+    <script src="app/entities/teammate/teammate.state.js"></script>
+    <script src="app/entities/teammate/teammate.service.js"></script>
+    <script src="app/entities/teammate/teammate.controller.js"></script>
+    <script src="app/entities/team/team-dialog.controller.js"></script>
+    <script src="app/entities/team/team-detail.controller.js"></script>
+    <script src="app/entities/team/team-delete-dialog.controller.js"></script>
+    <script src="app/entities/team/team.state.js"></script>
+    <script src="app/entities/team/team.service.js"></script>
+    <script src="app/entities/team/team.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/department/department-dialog.controller.js"></script>
+    <script src="app/entities/department/department-detail.controller.js"></script>
+    <script src="app/entities/department/department-delete-dialog.controller.js"></script>
+    <script src="app/entities/department/department.state.js"></script>
+    <script src="app/entities/department/department.service.js"></script>
+    <script src="app/entities/department/department.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
